[project]
name = "asammdfplus"
version = "8.2.0"
description = "A wrapper for asammdf with additional features"
license = "MIT"
readme = "README.md"
dependencies = ["asammdf >=8.2, <8.3", "numpy", "pandas", "matplotlib"]

[tool.setuptools.packages.find]
where = ["."]
include = ["asammdfplus", "asammdfplus.*"]